        - rewritten how loading stages are selected
        - order may change now where no dependency is
        - you can add dependencies if needed special order
        - custom loading stages are currently hard to create [internal cache must be re-calculated],
            events for existing stages are simpler
        - there might be various errors around this, it is highly experimental


changelog of snapshot 20w51a, released on 18.12.2020, targeting 20w51a
    WARNING:  M A J O R  BREAKING VERSION!!!!
    THIS VERSION CONTAINS HIGHLY BREAKING CHANGES. IT IS NOWHERE NEAR TO BEING COMPATIBLE

    THIS ALSO ENDS SUPPORT FOR ALL OLD VERSIONS BEFORE THIS RELEASE

    BREAKING CHANGES MAY CONTINUE UNTIL STABLE RELEASE

    THIS SNAPSHOT FIXES A  L O T  OF ISSUES [partly by rewriting the parts, partly by code review]

    this is nowhere near an complete list, see version.info for more, or the github logs

    refactoring:
        - refactored nearly everything..., multiple times...
        majors:
            - globals.py to mcpython/shared.py
            - logger.py to mcpython/logger.py
            - most stuff into client/, server/ or common/-folders
            - NO support for non-mcpython-prefixed imports

    deprecation:
        - removed all deprecated stuff and a little bit more

    API:
        - improved, refactored, extended APIS [nearly all]

    Utils:
        - added more util code

    Debug:
        - added more debug info
        - added an debug generator for biome distribution

    Rendering:
        - improved some bits
        - improved texture reload
        - changed rendering code for a lot of stuff

    World Storage:
        - improved overall world storage & debug information

    World gen:
        - a lot of changes, again...
        - moved world generator config in-game

    fixed issues:
        - InventoryHandler was handling some itemstack's wrong leading into itemstack's with higher stack size