@@ -80,6 +80,13 @@ changelog of snapshot [next], released on -, targeting -
             events for existing stages are simpler
         - there might be various errors around this, it is highly experimental
 
+    Gameplay:
+        - items can now set which blocks they can break in gamemode 2
+
+    Behind-the-scenes:
+        - improved memory usage for loading event annotations
+        - improved memory usage in BlockFaceState for hidden blocks
+
 
 changelog of snapshot 20w51a, released on 18.12.2020, targeting 20w51a
     WARNING:  M A J O R  BREAKING VERSION!!!!
